--- a/Python for Comp 1/Comp1_NewVars_Norm_Working.ipynb
+++ b/Python for Comp 1/Comp1_NewVars_Norm_Working.ipynb
@@ -1135,6 +1135,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(len(ipo_data_new.columns)):\n",
+    "    if ipo_data.iloc[:,i].dtype == float:"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {
     "collapsed": false
