--- a/Python for Comp 1/Comp1_NewVars_Norm_Working.ipynb
+++ b/Python for Comp 1/Comp1_NewVars_Norm_Working.ipynb
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -829,7 +829,7 @@
        "max    309.000000  944.000000  883.000000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,19 +1135,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "for i in range(len(ipo_data_new.columns)):\n",
-    "    if ipo_data.iloc[:,i].dtype == float:"
+    "    if ipo_data.iloc[:,i].dtype == float:\n",
+    "        ipo_data.iloc[:,i] = (ipo_data.iloc[:,i])/(10**len(str(int(max(ipo_data.iloc[:,i]))))) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -1156,48 +1157,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     I1                                  I2    I3  P(IPO)  P(H)  P(L)  \\\n",
-      "0  AATI  ADVANCED ANALOGIC TECHNOLOGIES INC  3674    10.0   9.5   8.5   \n",
-      "1  ABPI     ACCENTIA BIOPHARMACEUTICALS INC  2834     8.0  10.0   8.0   \n",
-      "2  ACAD          ACADIA PHARMACEUTICALS INC  2834     7.0  14.0  12.0   \n",
-      "3  ACHN       ACHILLION PHARMACEUTICALS INC  2834    11.5  16.0  14.0   \n",
-      "4  ACLI     AMERICAN COMMERCIAL LINES INC.   4492    21.0  21.0  19.0   \n",
-      "5  ACOM                  Ancestry.com Inc.   7379    13.5  14.5  12.5   \n",
-      "6  ACOR             ACORDA THERAPEUTICS INC  2836     6.0  13.0  11.0   \n",
-      "7  ACRX          ACELRX PHARMACEUTICALS INC  2834     5.0  14.0  12.0   \n",
-      "8  ACTV                  ACTIVE NETWORK INC  7372    15.0  18.0  16.0   \n",
-      "9   ACW                       ACCURIDE CORP  3714     9.0  19.0  17.0   \n",
+      "     I1                                  I2    I3  P(IPO)    P(H)    P(L)  \\\n",
+      "0  AATI  ADVANCED ANALOGIC TECHNOLOGIES INC  3674   0.100  0.0095  0.0085   \n",
+      "1  ABPI     ACCENTIA BIOPHARMACEUTICALS INC  2834   0.080  0.0100  0.0080   \n",
+      "2  ACAD          ACADIA PHARMACEUTICALS INC  2834   0.070  0.0140  0.0120   \n",
+      "3  ACHN       ACHILLION PHARMACEUTICALS INC  2834   0.115  0.0160  0.0140   \n",
+      "4  ACLI     AMERICAN COMMERCIAL LINES INC.   4492   0.210  0.0210  0.0190   \n",
+      "5  ACOM                  Ancestry.com Inc.   7379   0.135  0.0145  0.0125   \n",
+      "6  ACOR             ACORDA THERAPEUTICS INC  2836   0.060  0.0130  0.0110   \n",
+      "7  ACRX          ACELRX PHARMACEUTICALS INC  2834   0.050  0.0140  0.0120   \n",
+      "8  ACTV                  ACTIVE NETWORK INC  7372   0.150  0.0180  0.0160   \n",
+      "9   ACW                       ACCURIDE CORP  3714   0.090  0.0190  0.0170   \n",
       "\n",
-      "     P(1Day)     C1     C2    C3      ...         C7_dec  T1_dec   T2_dec  \\\n",
-      "0  11.870000  122.0   True  3.43      ...       0.000513  0.0470  0.12719   \n",
-      "1   7.250000  259.0  False -1.62      ...       0.000259  0.0791  0.21792   \n",
-      "2   6.700000   90.0   True -1.24      ...       0.000074  0.0201  0.05262   \n",
-      "3  12.390000  209.0   True -0.91      ...       0.000085  0.0328  0.08259   \n",
-      "4  56.599998   80.0   True  0.07      ...       0.006323  0.0572  0.14830   \n",
-      "5  14.200000   94.0   True  0.06      ...       0.001976  0.0510  0.17999   \n",
-      "6   6.720000  128.0   True -1.87      ...       0.000051  0.0495  0.15758   \n",
-      "7   4.550000   91.0  False -0.74      ...       0.005005  0.0334  0.11226   \n",
-      "8  15.900000  100.0   True -0.51      ...       0.002796  0.0620  0.14813   \n",
-      "9   0.000000  106.0   True  1.49      ...       0.004940  0.0385  0.09134   \n",
+      "    P(1Day)      C1     C2        C3  ...          C6        C7      T1  \\\n",
+      "0  0.001187  0.0122   True  0.000343  ...    0.010600  0.000513  0.0470   \n",
+      "1  0.000725  0.0259  False -0.000162  ...    0.002400  0.000259  0.0791   \n",
+      "2  0.000670  0.0090   True -0.000124  ...    0.005000  0.000074  0.0201   \n",
+      "3  0.001239  0.0209   True -0.000091  ...    0.004500  0.000085  0.0328   \n",
+      "4  0.005660  0.0080   True  0.000007  ...    0.008250  0.006323  0.0572   \n",
+      "5  0.001420  0.0094   True  0.000006  ...    0.007407  0.001976  0.0510   \n",
+      "6  0.000672  0.0128   True -0.000187  ...    0.005500  0.000051  0.0495   \n",
+      "7  0.000455  0.0091  False -0.000074  ...    0.008000       NaN  0.0334   \n",
+      "8  0.001590  0.0100   True -0.000051  ...    0.011000  0.002796  0.0620   \n",
+      "9  0.000000  0.0106   True  0.000149  ...    0.011000  0.004940  0.0385   \n",
       "\n",
-      "    T3_dec  T4_dec   T5_dec  S1_dec  S2_dec  S3_dec  P(H)_New_dec  \n",
-      "0  0.11560  0.0301  0.00690   0.062   0.117   0.139       0.00095  \n",
-      "1  0.19585  0.0510  0.01120   0.071   0.242   0.237       0.00100  \n",
-      "2  0.04785  0.0128  0.00325   0.061   0.033   0.060       0.00140  \n",
-      "3  0.07574  0.0177  0.00509   0.080   0.059   0.110       0.00160  \n",
-      "4  0.13176  0.0336  0.00720   0.067   0.149   0.167       0.00210  \n",
-      "5  0.13934  0.0328  0.00815   0.062   0.096   0.181       0.00145  \n",
-      "6  0.13953  0.0379  0.00698   0.082   0.106   0.135       0.00130  \n",
-      "7  0.10056  0.0276 -0.00001   0.055   0.120   0.122       0.00140  \n",
-      "8  0.13463  0.0335  0.00917   0.058   0.124   0.234       0.00180  \n",
-      "9  0.08107  0.0198  0.00459   0.081   0.090   0.147       0.00190  \n",
+      "        T2       T3      T4       T5     S1     S2     S3  \n",
+      "0  0.12719  0.11560  0.0301  0.00690  0.062  0.117  0.139  \n",
+      "1  0.21792  0.19585  0.0510  0.01120  0.071  0.242  0.237  \n",
+      "2  0.05262  0.04785  0.0128  0.00325  0.061  0.033  0.060  \n",
+      "3  0.08259  0.07574  0.0177  0.00509  0.080  0.059  0.110  \n",
+      "4  0.14830  0.13176  0.0336  0.00720  0.067  0.149  0.167  \n",
+      "5  0.17999  0.13934  0.0328  0.00815  0.062  0.096  0.181  \n",
+      "6  0.15758  0.13953  0.0379  0.00698  0.082  0.106  0.135  \n",
+      "7  0.11226  0.10056  0.0276 -0.00001  0.055  0.120  0.122  \n",
+      "8  0.14813  0.13463  0.0335  0.00917  0.058  0.124  0.234  \n",
+      "9  0.09134  0.08107  0.0198  0.00459  0.081  0.090  0.147  \n",
       "\n",
-      "[10 rows x 42 columns]\n"
+      "[10 rows x 22 columns]\n"
      ]
     }
    ],
    "source": [
-    "print(ipo_data_new.head(10))"
+    "print(ipo_data.head(10))"
    ]
   },
   {
