--- a/Python for Comp 1/Comp1_NewVars_Norm_Working.ipynb
+++ b/Python for Comp 1/Comp1_NewVars_Norm_Working.ipynb
@@ -49,262 +49,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>P(IPO)</th>\n",
-       "      <th>P(H)</th>\n",
-       "      <th>P(L)</th>\n",
-       "      <th>P(1Day)</th>\n",
-       "      <th>C1</th>\n",
-       "      <th>C3</th>\n",
-       "      <th>C4</th>\n",
-       "      <th>C5</th>\n",
-       "      <th>C6</th>\n",
-       "      <th>C7</th>\n",
-       "      <th>T1</th>\n",
-       "      <th>T2</th>\n",
-       "      <th>T3</th>\n",
-       "      <th>T4</th>\n",
-       "      <th>T5</th>\n",
-       "      <th>S1</th>\n",
-       "      <th>S2</th>\n",
-       "      <th>S3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>677.000000</td>\n",
-       "      <td>672.000000</td>\n",
-       "      <td>672.000000</td>\n",
-       "      <td>660.000000</td>\n",
-       "      <td>660.000000</td>\n",
-       "      <td>646.000000</td>\n",
-       "      <td>660.000000</td>\n",
-       "      <td>6.760000e+02</td>\n",
-       "      <td>6.760000e+02</td>\n",
-       "      <td>610.000000</td>\n",
-       "      <td>681.000000</td>\n",
-       "      <td>681.000000</td>\n",
-       "      <td>681.000000</td>\n",
-       "      <td>681.000000</td>\n",
-       "      <td>681.000000</td>\n",
-       "      <td>681.000000</td>\n",
-       "      <td>681.000000</td>\n",
-       "      <td>681.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>13.837666</td>\n",
-       "      <td>15.481190</td>\n",
-       "      <td>13.515045</td>\n",
-       "      <td>25.934766</td>\n",
-       "      <td>149.728788</td>\n",
-       "      <td>1.788904</td>\n",
-       "      <td>0.007282</td>\n",
-       "      <td>4.935776e+07</td>\n",
-       "      <td>1.241519e+07</td>\n",
-       "      <td>500.459962</td>\n",
-       "      <td>465.634361</td>\n",
-       "      <td>12758.606461</td>\n",
-       "      <td>11395.844347</td>\n",
-       "      <td>294.353891</td>\n",
-       "      <td>679.220264</td>\n",
-       "      <td>68.421439</td>\n",
-       "      <td>120.104258</td>\n",
-       "      <td>144.759178</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>6.053731</td>\n",
-       "      <td>6.653429</td>\n",
-       "      <td>5.835646</td>\n",
-       "      <td>73.234948</td>\n",
-       "      <td>152.817467</td>\n",
-       "      <td>162.666532</td>\n",
-       "      <td>0.033318</td>\n",
-       "      <td>1.043764e+08</td>\n",
-       "      <td>2.512855e+07</td>\n",
-       "      <td>1648.337634</td>\n",
-       "      <td>175.741647</td>\n",
-       "      <td>5449.644597</td>\n",
-       "      <td>4839.670179</td>\n",
-       "      <td>121.532637</td>\n",
-       "      <td>472.914323</td>\n",
-       "      <td>39.096525</td>\n",
-       "      <td>84.828959</td>\n",
-       "      <td>69.276285</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>-786.239000</td>\n",
-       "      <td>-0.162352</td>\n",
-       "      <td>3.693227e+06</td>\n",
-       "      <td>5.250000e+05</td>\n",
-       "      <td>0.074000</td>\n",
-       "      <td>132.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>26.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>12.500000</td>\n",
-       "      <td>11.000000</td>\n",
-       "      <td>11.000000</td>\n",
-       "      <td>85.000000</td>\n",
-       "      <td>-0.852500</td>\n",
-       "      <td>-0.013927</td>\n",
-       "      <td>1.871417e+07</td>\n",
-       "      <td>5.000000e+06</td>\n",
-       "      <td>37.245750</td>\n",
-       "      <td>351.000000</td>\n",
-       "      <td>9195.000000</td>\n",
-       "      <td>8162.000000</td>\n",
-       "      <td>213.000000</td>\n",
-       "      <td>462.000000</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>73.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>13.500000</td>\n",
-       "      <td>15.000000</td>\n",
-       "      <td>13.000000</td>\n",
-       "      <td>14.845000</td>\n",
-       "      <td>107.000000</td>\n",
-       "      <td>0.010000</td>\n",
-       "      <td>0.009125</td>\n",
-       "      <td>2.740018e+07</td>\n",
-       "      <td>7.398704e+06</td>\n",
-       "      <td>103.833000</td>\n",
-       "      <td>444.000000</td>\n",
-       "      <td>12045.000000</td>\n",
-       "      <td>10785.000000</td>\n",
-       "      <td>279.000000</td>\n",
-       "      <td>624.000000</td>\n",
-       "      <td>60.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>134.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>17.000000</td>\n",
-       "      <td>17.000000</td>\n",
-       "      <td>15.000000</td>\n",
-       "      <td>20.485000</td>\n",
-       "      <td>155.250000</td>\n",
-       "      <td>0.470000</td>\n",
-       "      <td>0.031571</td>\n",
-       "      <td>4.980786e+07</td>\n",
-       "      <td>1.200000e+07</td>\n",
-       "      <td>331.138000</td>\n",
-       "      <td>551.000000</td>\n",
-       "      <td>15241.000000</td>\n",
-       "      <td>13760.000000</td>\n",
-       "      <td>354.000000</td>\n",
-       "      <td>795.000000</td>\n",
-       "      <td>85.000000</td>\n",
-       "      <td>142.000000</td>\n",
-       "      <td>173.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>85.000000</td>\n",
-       "      <td>135.000000</td>\n",
-       "      <td>108.000000</td>\n",
-       "      <td>1159.200562</td>\n",
-       "      <td>2087.000000</td>\n",
-       "      <td>3864.500000</td>\n",
-       "      <td>0.092896</td>\n",
-       "      <td>2.138085e+09</td>\n",
-       "      <td>4.212336e+08</td>\n",
-       "      <td>30683.000000</td>\n",
-       "      <td>1750.000000</td>\n",
-       "      <td>49056.000000</td>\n",
-       "      <td>43952.000000</td>\n",
-       "      <td>1058.000000</td>\n",
-       "      <td>10277.000000</td>\n",
-       "      <td>309.000000</td>\n",
-       "      <td>944.000000</td>\n",
-       "      <td>883.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           P(IPO)        P(H)        P(L)      P(1Day)           C1  \\\n",
-       "count  677.000000  672.000000  672.000000   660.000000   660.000000   \n",
-       "mean    13.837666   15.481190   13.515045    25.934766   149.728788   \n",
-       "std      6.053731    6.653429    5.835646    73.234948   152.817467   \n",
-       "min      3.000000    0.000000    3.000000     0.000000    10.000000   \n",
-       "25%     10.000000   12.500000   11.000000    11.000000    85.000000   \n",
-       "50%     13.500000   15.000000   13.000000    14.845000   107.000000   \n",
-       "75%     17.000000   17.000000   15.000000    20.485000   155.250000   \n",
-       "max     85.000000  135.000000  108.000000  1159.200562  2087.000000   \n",
-       "\n",
-       "                C3          C4            C5            C6            C7  \\\n",
-       "count   646.000000  660.000000  6.760000e+02  6.760000e+02    610.000000   \n",
-       "mean      1.788904    0.007282  4.935776e+07  1.241519e+07    500.459962   \n",
-       "std     162.666532    0.033318  1.043764e+08  2.512855e+07   1648.337634   \n",
-       "min    -786.239000   -0.162352  3.693227e+06  5.250000e+05      0.074000   \n",
-       "25%      -0.852500   -0.013927  1.871417e+07  5.000000e+06     37.245750   \n",
-       "50%       0.010000    0.009125  2.740018e+07  7.398704e+06    103.833000   \n",
-       "75%       0.470000    0.031571  4.980786e+07  1.200000e+07    331.138000   \n",
-       "max    3864.500000    0.092896  2.138085e+09  4.212336e+08  30683.000000   \n",
-       "\n",
-       "                T1            T2            T3           T4            T5  \\\n",
-       "count   681.000000    681.000000    681.000000   681.000000    681.000000   \n",
-       "mean    465.634361  12758.606461  11395.844347   294.353891    679.220264   \n",
-       "std     175.741647   5449.644597   4839.670179   121.532637    472.914323   \n",
-       "min     132.000000      0.000000      0.000000     0.000000     -1.000000   \n",
-       "25%     351.000000   9195.000000   8162.000000   213.000000    462.000000   \n",
-       "50%     444.000000  12045.000000  10785.000000   279.000000    624.000000   \n",
-       "75%     551.000000  15241.000000  13760.000000   354.000000    795.000000   \n",
-       "max    1750.000000  49056.000000  43952.000000  1058.000000  10277.000000   \n",
-       "\n",
-       "               S1          S2          S3  \n",
-       "count  681.000000  681.000000  681.000000  \n",
-       "mean    68.421439  120.104258  144.759178  \n",
-       "std     39.096525   84.828959   69.276285  \n",
-       "min     -1.000000   20.000000   26.000000  \n",
-       "25%     45.000000   73.000000  100.000000  \n",
-       "50%     60.000000  100.000000  134.000000  \n",
-       "75%     85.000000  142.000000  173.000000  \n",
-       "max    309.000000  944.000000  883.000000  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'function' object has no attribute 'to_excel'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-e108342fe823>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;31m#descriptive stats\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mipo_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdescribe\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_excel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Descriptive Statistics.xlsx'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'function' object has no attribute 'to_excel'"
+     ]
     }
    ],
    "source": [
     "#descriptive stats\n",
-    "ipo_data.describe()"
+    "ipo_data.describe()\n"
    ]
   },
   {
