--- a/Python for Comp 1/Comp1_NewVars_Norm_Working.ipynb
+++ b/Python for Comp 1/Comp1_NewVars_Norm_Working.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\danielle.ezzo\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "C:\\Users\\Tim\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
       "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
      ]
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -47,13 +47,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -293,7 +306,7 @@
        "max    309.000000  944.000000  883.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -317,13 +330,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -563,7 +589,7 @@
        "max    309.000000  944.000000  883.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -583,6 +609,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -822,7 +861,7 @@
        "max    309.000000  944.000000  883.000000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,9 +872,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     I1                                  I2    I3  P(IPO)  P(H)  P(L)  \\\n",
+      "0  AATI  ADVANCED ANALOGIC TECHNOLOGIES INC  3674    10.0   9.5   8.5   \n",
+      "1  ABPI     ACCENTIA BIOPHARMACEUTICALS INC  2834     8.0  10.0   8.0   \n",
+      "2  ACAD          ACADIA PHARMACEUTICALS INC  2834     7.0  14.0  12.0   \n",
+      "3  ACHN       ACHILLION PHARMACEUTICALS INC  2834    11.5  16.0  14.0   \n",
+      "4  ACLI     AMERICAN COMMERCIAL LINES INC.   4492    21.0  21.0  19.0   \n",
+      "5  ACOM                  Ancestry.com Inc.   7379    13.5  14.5  12.5   \n",
+      "6  ACOR             ACORDA THERAPEUTICS INC  2836     6.0  13.0  11.0   \n",
+      "7  ACRX          ACELRX PHARMACEUTICALS INC  2834     5.0  14.0  12.0   \n",
+      "8  ACTV                  ACTIVE NETWORK INC  7372    15.0  18.0  16.0   \n",
+      "9   ACW                       ACCURIDE CORP  3714     9.0  19.0  17.0   \n",
+      "\n",
+      "     P(1Day)     C1     C2    C3   ...         C7     T1       T2       T3  \\\n",
+      "0  11.870000  122.0   True  3.43   ...     51.345  470.0  12719.0  11560.0   \n",
+      "1   7.250000  259.0  False -1.62   ...     25.936  791.0  21792.0  19585.0   \n",
+      "2   6.700000   90.0   True -1.24   ...      7.378  201.0   5262.0   4785.0   \n",
+      "3  12.390000  209.0   True -0.91   ...      8.526  328.0   8259.0   7574.0   \n",
+      "4  56.599998   80.0   True  0.07   ...    632.298  572.0  14830.0  13176.0   \n",
+      "5  14.200000   94.0   True  0.06   ...    197.591  510.0  17999.0  13934.0   \n",
+      "6   6.720000  128.0   True -1.87   ...      5.146  495.0  15758.0  13953.0   \n",
+      "7   4.550000   91.0  False -0.74   ...        NaN  334.0  11226.0  10056.0   \n",
+      "8  15.900000  100.0   True -0.51   ...    279.600  620.0  14813.0  13463.0   \n",
+      "9   0.000000  106.0   True  1.49   ...    494.008  385.0   9134.0   8107.0   \n",
+      "\n",
+      "      T4      T5    S1     S2     S3  P(mid)  \n",
+      "0  301.0   690.0  62.0  117.0  139.0     9.0  \n",
+      "1  510.0  1120.0  71.0  242.0  237.0     9.0  \n",
+      "2  128.0   325.0  61.0   33.0   60.0    13.0  \n",
+      "3  177.0   509.0  80.0   59.0  110.0    15.0  \n",
+      "4  336.0   720.0  67.0  149.0  167.0    20.0  \n",
+      "5  328.0   815.0  62.0   96.0  181.0    13.5  \n",
+      "6  379.0   698.0  82.0  106.0  135.0    12.0  \n",
+      "7  276.0    -1.0  55.0  120.0  122.0    13.0  \n",
+      "8  335.0   917.0  58.0  124.0  234.0    17.0  \n",
+      "9  198.0   459.0  81.0   90.0  147.0    18.0  \n",
+      "\n",
+      "[10 rows x 23 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "#creating Y1 attribute\n",
     "#first create new column for p(mid) which is needed to calculate\n",
@@ -857,11 +940,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>I1</th>\n",
+       "      <th>I2</th>\n",
+       "      <th>I3</th>\n",
+       "      <th>P(IPO)</th>\n",
+       "      <th>P(H)</th>\n",
+       "      <th>P(L)</th>\n",
+       "      <th>P(1Day)</th>\n",
+       "      <th>C1</th>\n",
+       "      <th>C2</th>\n",
+       "      <th>C3</th>\n",
+       "      <th>...</th>\n",
+       "      <th>T1</th>\n",
+       "      <th>T2</th>\n",
+       "      <th>T3</th>\n",
+       "      <th>T4</th>\n",
+       "      <th>T5</th>\n",
+       "      <th>S1</th>\n",
+       "      <th>S2</th>\n",
+       "      <th>S3</th>\n",
+       "      <th>P(mid)</th>\n",
+       "      <th>Y1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>332</th>\n",
+       "      <td>KIPS</td>\n",
+       "      <td>Kips Bay Medical, Inc.</td>\n",
+       "      <td>3841</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7.93</td>\n",
+       "      <td>309.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-0.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>341.0</td>\n",
+       "      <td>9314.0</td>\n",
+       "      <td>8647.0</td>\n",
+       "      <td>218.0</td>\n",
+       "      <td>519.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>416</th>\n",
+       "      <td>NPTT</td>\n",
+       "      <td>NPTEST HOLDING CORP</td>\n",
+       "      <td>3825</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>11.49</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>411.0</td>\n",
+       "      <td>11737.0</td>\n",
+       "      <td>10440.0</td>\n",
+       "      <td>275.0</td>\n",
+       "      <td>784.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>289.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       I1                      I2    I3  P(IPO)  P(H)  P(L)  P(1Day)     C1  \\\n",
+       "332  KIPS  Kips Bay Medical, Inc.  3841     8.0   0.0   8.0     7.93  309.0   \n",
+       "416  NPTT     NPTEST HOLDING CORP  3825    12.0   3.0  11.0    11.49   92.0   \n",
+       "\n",
+       "        C2   C3 ...     T1       T2       T3     T4     T5    S1     S2  \\\n",
+       "332  False -0.7 ...  341.0   9314.0   8647.0  218.0  519.0  55.0  119.0   \n",
+       "416   True  NaN ...  411.0  11737.0  10440.0  275.0  784.0  66.0  133.0   \n",
+       "\n",
+       "        S3  P(mid)  Y1  \n",
+       "332  102.0     4.0   1  \n",
+       "416  289.0     7.0   1  \n",
+       "\n",
+       "[2 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#verify if statement worked\n",
     "ipo_data.loc[ipo_data['P(H)'] < ipo_data['P(mid)']]"
@@ -869,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -889,13 +1089,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -2586,7 +2799,7 @@
        "[461 rows x 25 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2598,7 +2811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -2618,13 +2831,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -4315,7 +4541,7 @@
        "[330 rows x 26 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4327,7 +4553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -4339,7 +4565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -4392,8 +4618,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#creating C6^ attribute\n",
@@ -4410,13 +4638,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -6107,7 +6348,7 @@
        "[342 rows x 28 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6119,7 +6360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -6145,7 +6386,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\danielle.ezzo\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:429: DataConversionWarning: Data with input dtype object was converted to float64 by the normalize function.\n",
+      "C:\\Users\\Tim\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:429: DataConversionWarning: Data with input dtype object was converted to float64 by the normalize function.\n",
       "  warnings.warn(msg, _DataConversionWarning)\n"
      ]
     }
