Updated the Milestone report in spare half hour

--- a/Python for Comp 1/Milestone Report.ipynb
+++ b/Python for Comp 1/Milestone Report.ipynb
@@ -17,7 +17,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -344,6 +343,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Imputation\n",
+    "When replacing missing values, our methods depended on the data type of the specific variable in question. For descriptive attributes like I3, we conducted research to find the correct identification numbers and then manually updated our dataset. For Continuous/Float variables, we used a python script to replace the missing variables with their respective means, as this is an often using procedure when dealing with missing values to replace with either the mean or median. For the purposes of this report, we arbitrarily choose the mean for our benchmark model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ipo_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-f8991f365aa6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#Replace NaN values with mean\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mipo_data\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mipo_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfillna\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mipo_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'ipo_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#Replace NaN values with mean\n",
+    "ipo_data=ipo_data.fillna(ipo_data.mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Variable Creation\n",
     "Based on the provided data dictionary, we created two target variables, and three control Variables:\n",
     "#### Target\n",
@@ -359,24 +388,59 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Imputation\n",
-    "When replacing missing values, our methods depended on the data type of the specific variable in question. For descriptive attributes like I3, we conducted research to find the correct identification numbers and then manually updated our dataset. For Continuous/Float variables, we used a python script to replace the missing variables with their respective means."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#Replace NaN values with mean\n",
-    "ipo_data=ipo_data.fillna(ipo_data.mean())"
+    "calc(ipo_data)\n",
+    "del ipo_data['C3']\n",
+    "del ipo_data['C5']\n",
+    "del ipo_data['C6']\n",
+    "del ipo_data['T1']\n",
+    "del ipo_data['T2']\n",
+    "del ipo_data['T3']\n",
+    "del ipo_data['T4']\n",
+    "del ipo_data['T5']\n",
+    "del ipo_data['S1']\n",
+    "del ipo_data['S2']\n",
+    "del ipo_data['S3']\n",
+    "ipo_data.describe()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we create several new variables, for example, we create T3x which is the ratio of Real Words to Total Words, we felt justified in removing the variable T3 from our data set as it would be covered in all future analysis by T3x. This was done to keep our data frame tidy.\n",
+    "\n",
+    "As we read in our data, some variables were not read correctly in terms of types so we changed their type to be more appropriate and then printed the types of all our variables in order to ensure we were happy with them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ipo_data.C6x = ipo_data.C6x.astype(float)\n",
+    "\n",
+    "ipo_data.C2 = ipo_data.C2.astype(int)\n",
+    "print(ipo_data.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -384,16 +448,34 @@
    "source": [
     "### Outliers\n",
     "To deal with outliers, we plan on using the following methods for various data versions:\n",
-    " * Calculating the points that are greater than or less than 3 standard deviations\n",
-    "   away from the mean and setting any values outside this range to the upper / lower bound, respectively\n",
-    " * Calculating the points that are greater than or less than 3 standard deviations\n",
+    " 1. Calculating the points that are greater than or less than 3 standard deviations\n",
+    "   away from the mean and setting any values outside this range to the upper / lower bound, respectively.\n",
+    " 2. Calculating the points that are greater than or less than 3 standard deviations\n",
     "   away from the mean and setting any values outside this range to the mean\n",
-    " * Calculating the Interquartile Range and finding values outside the limits Q1-IQR*1.5 and Q3+IQR*1.5 \n",
+    " 3. Calculating the Interquartile Range and finding values outside the limits Q1-IQR*1.5 and Q3+IQR*1.5 \n",
     "   and setting to be the mean\n",
-    " * Calculating the Interquartile Range and finding values outside the limits Q1-IQR*1.5 and Q3+IQR*1.5 \n",
-    "    and setting to be the the Q1 or Q3, respectively\n",
+    " 4. Calculating the Interquartile Range and finding values outside the limits Q1-IQR*1.5 and Q3+IQR*1.5 \n",
+    "    and setting to be the the Q1 or Q3, respectively.\n",
     "\n",
     " [Outliers](https://github.com/ConorFeeney/IS540-Code/blob/master/Python%20for%20Comp%201/outliers.py) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Put outlier code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see in the above script, we decided to use the fourth method for the purposes of this report. This was decided because it was felt that the standard deviation was too heavily influenced by extreme values, and additionally, while conducting Logistic Regression model tests, it was discovered that method four provided the highest F1-Score and AUC rating when coupled with other factors that will be discussed later."
    ]
   },
   {
@@ -417,9 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5135,7 +5215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
