--- a/Python for Comp 1/Milestone Report.ipynb
+++ b/Python for Comp 1/Milestone Report.ipynb
@@ -286,20 +286,33 @@
     }
    ],
    "source": [
-    "# Import Packages\n",
+    "# Importing useful packages\n",
     "import numpy as np\n",
+    "from scipy import stats\n",
     "import pandas as pd\n",
     "import sklearn as sk\n",
     "import seaborn as sb\n",
     "import datetime as dt\n",
+    "import pylab \n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn import preprocessing\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.cross_validation import train_test_split\n",
-    "from sklearn import metrics \n",
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn.cross_validation import cross_val_score\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from new_var import calc\n",
+    "from outliers import outlier\n",
+    "from Normalise import norm_method\n",
     "%matplotlib inline\n",
+    "from sklearn import datasets\n",
+    "from sklearn.feature_selection import RFE\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "import statsmodels.api as sm\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn import metrics\n",
+    "from sklearn import model_selection\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.metrics import roc_curve\n",
+    "from sklearn.cross_validation import train_test_split\n",
     "\n",
     "# Read in Data file and define NaN values\n",
     "ipo_data = pd.read_excel(\"Competation #1 Raw Data_New.xlsx\",header=0,na_values='-' )\n",
