--- a/Python for Comp 1/Milestone Report.ipynb
+++ b/Python for Comp 1/Milestone Report.ipynb
@@ -298,7 +298,8 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from new_var import calc\n",
     "from outliers import outlier\n",
-    "from Normalise import norm_method\n",
+    "\n",
+    "from Recoding_SIC_Codes import Industry_Division \n",
     "%matplotlib inline\n",
     "from sklearn import datasets\n",
     "from sklearn.feature_selection import RFE\n",
@@ -499,6 +500,18 @@
     "During the data understanding step, we realized that I3, or the Standard Industry Code for each record, was not populated and/or incorrect for instances. After correcting these instances, we were able to match to an Industry Division based on the codes. This allowed us to recode the I3 column to a categorical variable of Industry divisions, that we will later be able to use as a way of clustering the records prior to modeling, to hopefully improve the model fit.\n",
     "\n",
     "[Recoding SIC Column](https://github.com/ConorFeeney/IS540-Code/blob/master/Python%20for%20Comp%201/Recoding%20SIC%20Code%20to%20Industry%20Division.ipynb) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Add the new data to the end of the table\n",
+    "ipo_data['IndDivision'] = ipo_data.apply(Industry_Division, axis=1)"
    ]
   },
   {
@@ -5171,7 +5184,7 @@
     }
    ],
    "source": [
-    "ipo_data.corr(method='spearman').style.format(\"{:.2}\").background_gradient(cmap=plt.get_cmap('bwr'), axis=1)"
+    "ipo_data.corr(method='spearman').style.format(\"{:.2}\").background_gradient(cmap=plt.get_cmap('coolwarm'), axis=1)"
    ]
   },
   {
@@ -5184,7 +5197,8 @@
     " * Zscore standardization\n",
     " * Decimal scaling\n",
     " \n",
-    "[Standardising Function](https://github.com/ConorFeeney/IS540-Code/blob/master/Python%20for%20Comp%201/Standardising.py) "
+    "[Standardising Function](https://github.com/ConorFeeney/IS540-Code/blob/master/Python%20for%20Comp%201/Standardising.py) \n",
+    "\n"
    ]
   },
   {
