--- a/Python for Comp 1/Milestone Report.ipynb
+++ b/Python for Comp 1/Milestone Report.ipynb
@@ -358,7 +358,9 @@
    "metadata": {},
    "source": [
     "### Imputation\n",
-    "When replacing missing values, our methods depended on the data type of the specific variable in question. For descriptive attributes like I3, we conducted research to find the correct identification numbers and then manually updated our dataset. For Continuous/Float variables, we used a python script to replace the missing variables with their respective means, as this is an often using procedure when dealing with missing values to replace with either the mean or median. For the purposes of this report, we arbitrarily choose the mean for our benchmark model."
+    "When replacing missing values, our methods depended on the data type of the specific variable in question. For descriptive attributes like I3, we conducted research to find the correct identification numbers and then manually updated our dataset. For Continuous/Float variables, we used a python script to replace the missing variables with their respective means, as this is an often using procedure when dealing with missing values to replace with either the mean or median. For the purposes of this report, we arbitrarily choose the mean for our benchmark model.\n",
+    "\n",
+    "Additionally, negative and zero values in the T1 to S1 columns are removed as these are beleived to be errors in the data. We feel justified in this as researching the forms, it is our understanding that these are mandatory sections to be completed, confirming our belief that these are errors. Removing negatives was done because it is impossible to have a negative word total, thus we believe it is either there in error or to represent missing."
    ]
   },
   {
@@ -380,7 +382,19 @@
    ],
    "source": [
     "#Replace NaN values with mean\n",
-    "ipo_data=ipo_data.fillna(ipo_data.mean())"
+    "ipo_data=ipo_data.fillna(ipo_data.mean())\n",
+    "\n",
+    "#Removing negative and 0 values for the word/sentence counts as it is beleived that these are errors\n",
+    "# Removing 0 and negatives for T' calculations        \n",
+    "ipo_data['T2']=ipo_data['T2'].mask(ipo_data['T2'] <= 0,ipo_data['T2'].mean())\n",
+    "ipo_data['T1']=ipo_data['T1'].mask(ipo_data['T1'] <= 0,ipo_data['T1'].mean())\n",
+    "ipo_data['T3']=ipo_data['T3'].mask(ipo_data['T3'] <= 0,ipo_data['T3'].mean())\n",
+    "ipo_data['T4']=ipo_data['T4'].mask(ipo_data['T4'] <= 0,ipo_data['T4'].mean())\n",
+    "ipo_data['T5']=ipo_data['T5'].mask(ipo_data['T5'] <= 0,ipo_data['T5'].mean())\n",
+    "ipo_data['S1']=ipo_data['S1'].mask(ipo_data['S1'] <= 0,ipo_data['S1'].mean())\n",
+    "\n",
+    "#We can now look at more representive descriptive statistics\n",
+    "ipo_data.describe()"
    ]
   },
   {
@@ -394,9 +408,9 @@
     " 2. Y2 - Binary variables, set to 1 if the IPO offer price is less than the first day trading price\n",
     " \n",
     "#### Control\n",
-    " 1. C3' - Binary variable, set to 1 if Earnings per Share is positive\n",
-    " 2. C5' - Continuous/Float variable, representing the share overhang\n",
-    " 3. C6' - Continuous/Float variable, representing the up revision\n",
+    " 1. C3x - Binary variable, set to 1 if Earnings per Share is positive\n",
+    " 2. C5x - Continuous/Float variable, representing the share overhang\n",
+    " 3. C6x - Continuous/Float variable, representing the up revision\n",
     " \n",
     " [New Variable Creation](https://github.com/ConorFeeney/IS540-Code/blob/master/Python%20for%20Comp%201/new_var.py) "
    ]
@@ -409,7 +423,16 @@
    },
    "outputs": [],
    "source": [
+    "# Creating our target and control variables\n",
+    "ipo_data['Y1'] = ipo_data.apply(y1function, axis=1)\n",
+    "ipo_data['Y2'] = ipo_data.apply(y2function, axis=1)\n",
+    "ipo_data['C3x'] = ipo_data.apply(C3function, axis=1)\n",
+    "ipo_data['C6x'] = ipo_data.apply(C6function, axis=1)\n",
+    "\n",
+    "#Creating ratios for the words, sentences and postive/negative counts. Ratios provide insight\n",
     "calc(ipo_data)\n",
+    "\n",
+    "#Removing redundent data\n",
     "del ipo_data['C3']\n",
     "del ipo_data['C5']\n",
     "del ipo_data['C6']\n",
@@ -421,6 +444,8 @@
     "del ipo_data['S1']\n",
     "del ipo_data['S2']\n",
     "del ipo_data['S3']\n",
+    "\n",
+    "#Looking at the new description of the data\n",
     "ipo_data.describe()"
    ]
   },
@@ -428,7 +453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we create several new variables, for example, we create T3x which is the ratio of Real Words to Total Words, we felt justified in removing the variable T3 from our data set as it would be covered in all future analysis by T3x. This was done to keep our data frame tidy.\n",
+    "As we create several new variables, for example, we create T3x which is the ratio of Real Words to Total Words, we felt justified in removing the variable T3 from our data set as it would be covered in all future analysis by T3x. This was done to keep our data frame tidy. This logic was also applied for T4 (now T4x, ratio of long sentences to total sentences), T5 (now T5x, ratio of long words to total words), S1 (now S1x, ratio of positive words to total words), S2 (now S2x, ratio of negative words to total words) and S3 (now S3x, ratio of uncertain words to total words).\n",
     "\n",
     "As we read in our data, some variables were not read correctly in terms of types so we changed their type to be more appropriate and then printed the types of all our variables in order to ensure we were happy with them."
    ]
@@ -497,7 +522,7 @@
    "metadata": {},
    "source": [
     "### Recoding\n",
-    "During the data understanding step, we realized that I3, or the Standard Industry Code for each record, was not populated and/or incorrect for instances. After correcting these instances, we were able to match to an Industry Division based on the codes. This allowed us to recode the I3 column to a categorical variable of Industry divisions, that we will later be able to use as a way of clustering the records prior to modeling, to hopefully improve the model fit.\n",
+    "During the data understanding step, we realized that I3, or the Standard Industry Code for each record, was not populated and/or incorrect for instances. After correcting these instances, we were able to match to an Industry Division based on the codes. This allowed us to recode the I3 column to a categorical variable of Industry divisions, that we will later be able to use as a way of clustering the records prior to modeling, to hopefully improve the model fit. However, this was not completed for the base model as this was a recent development to our data.\n",
     "\n",
     "[Recoding SIC Column](https://github.com/ConorFeeney/IS540-Code/blob/master/Python%20for%20Comp%201/Recoding%20SIC%20Code%20to%20Industry%20Division.ipynb) "
    ]
@@ -5192,8 +5217,10 @@
    "metadata": {},
    "source": [
     "### Standardization\n",
+    "Feature scaling is a method used to standardize the range of independent variables or features of data. In data processing, it is also known as data normalization and is generally performed during the data preprocessing step. Since the range of values of raw data varies widely, in some machine learning algorithms, objective functions will not work properly without normalization. For example, the majority of classifiers calculate the distance between two points by the Euclidean distance. If one of the features has a broad range of values, the distance will be governed by this particular feature. Therefore, the range of all features should be normalized so that each feature contributes approximately proportionately to the final distance. Bearing all this mind, we felt that this could only help improve our model accuracy.\n",
+    "\n",
     "To standardize, we developed code for three different methods:\n",
-    " * Min/Max scaling\n",
+    " * Min/Max scaling: The simplest method is rescaling the range of features to scale the range in [0, 1] or [−1, 1].\n",
     " * Zscore standardization\n",
     " * Decimal scaling\n",
     " \n",
