Update - Milestone & Model

--- a/Python for Comp 1/Scratch Files/Sug_Task_Jan28-Copy1.ipynb
+++ b/Python for Comp 1/Scratch Files/Sug_Task_Jan28-Copy1.ipynb
@@ -2817,7 +2817,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(zscore.describe())"
@@ -2850,7 +2852,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ztest1=stats.zscore(ztest)\n",
@@ -2877,7 +2881,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(zscore)"
