Updated the milestone report

--- a/Python for Comp 1/Milestone Report.ipynb
+++ b/Python for Comp 1/Milestone Report.ipynb
@@ -2644,7 +2644,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, there is a lot of output here. The first bit of out put relateas"
+    "As we can see, there is a lot of output here. The first bit of out put relates to Recursive Feature Elimination (RFE) and this is based on the idea to repeatedly construct a model and choose either the best or worst performing feature, setting the feature aside and then repeating the process with the rest of the features. This process is applied until all features in the dataset are exhausted. The goal of RFE is to select features by recursively considering smaller and smaller sets of features. As we can see all of our selected variables come back with \"True\".\n",
+    "\n",
+    "Next we have some statistical output that relates to our model. We see the log Likelihood, and r-squared valus. Beneath these we see our table containing the value of our coefficients in the \"coeff\" column for each of our significant variables. Initially we used a broader range of variables in attempts to build the model, but some of their p-values were greater than 0.10, and were eliminated one at a time until we had a stable model where all the variables left were deemed statistically significant. \n",
+    "\n",
+    "After this, predicting the test set results and calculating the accuracy is carried out and we obtain a value of 0.63. Following, we utilise cross0 validation. Cross validation attempts to avoid overfitting while still producing a prediction for each observation dataset. We are using 10-fold Cross-Validation to train our Logistic Regression model. The score we receive for this is 0.597, idicating that the average accuracy remains very close to the Logistic Regression model accuracy; hence, we can conclude that our model generalizes well. Before we move onto the F1 score and AUC we generate a confusion matrix and observe 73+56 (129) correct predictions and 42+34 (76) in correct predictions.\n",
+    "\n",
+    "Before we look at the F1 score here are some pointers to remember:\n",
+    "* The precision is the ratio tp / (tp + fp) where tp is the number of true positives and fp the number of false positives. The precision is intuitively the ability of the classifier to not label a sample as positive if it is negative.\n",
+    "* The recall is the ratio tp / (tp + fn) where tp is the number of true positives and fn the number of false negatives. The recall is intuitively the ability of the classifier to find all the positive samples.\n",
+    "* The F-beta score can be interpreted as a weighted harmonic mean of the precision and recall, where an F-beta score reaches its best value at 1 and worst score at 0.\n",
+    "* The F-beta score weights the recall more than the precision by a factor of beta. beta = 1.0 means recall and precision are equally important.\n",
+    "For the Y1 target variable we had an F1 score of 0.63.\n",
+    "\n",
+    "Finally we oberseve the ROC or AUC. The receiver operating characteristic (ROC) curve is another common tool used with binary classifiers. The dotted line represents the ROC curve of a purely random classifier; a good classifier stays as far away from that line as possible (toward the top-left corner). \n",
+    "\n",
+    "In the next block of code, we create a model for the *Y2* target variable. However, due to the inbalance in the outcomes of *Y2*, where around 70% of the values are \"1\", it was decided to reduce the number of records in the data set, specifically reducing those with the value 1. This was done to provide a closer to 50/50 split in the data so that the model would not become overly biased towards predicting \"1\" for our test set."
    ]
   },
   {
@@ -2799,31 +2814,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Notice that for the four variables we use, RFE deems them to be significant. The four variables we have selected are again all statistically significant, and the approach to select these four is identical to the one used in the previous model.\n",
+    "\n",
+    "After this, predicting the test set results and calculating the accuracy is carried out and we obtain a value of 0.69. Following, we utilise cross validation. The score we receive for this is 0.59, idicating that the average accuracy remains close close to the Logistic Regression model accuracy; hence, we can conclude that our model generalizes well. Before we move onto the F1 score and AUC we generate a confusion matrix and observe 73+56 (129) correct predictions and 42+34 (76) in correct predictions.\n",
+    "\n",
+    "For the Y2 target variable we had an F1 score of 0.67.\n",
+    "\n",
+    "Finally we oberseve the ROC or AUC.  "
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Conclusion and Next Steps\n",
+    "As we can see, we have accomplished a decent chunk of work in this first few weeks of this project. We have dealt with missing data, both the official NaN and more hidden ones like negative values in the number of words variables. This was done by replacing the missing values with the mean (except in the case of the dummy variable *C2* as discussed earlier). After this we began our data preperation for modelling.\n",
+    "\n",
+    "In this section we did a number of tasks, initially we began by attempting to normalise our continuous varaibles using the **log** and **square root** transformations to a acceptable degree success for our base model. We have shown the four methods of how we have dealt with outlies discussed in the Outliers section, as well as shown the three methods of standardising the data with the min - max method for example. We began our recoding of the *I3* variable and successfully recoded it into its sector level. We also  initiated our correlation analysis between continious variables.\n",
+    "\n",
+    "Finally we generated models for *Y1* and *Y2* respectively. We held a discussion of the results as well as a brief introduction to our accuracy measures with their respective accuracy scores.\n",
+    "\n",
+    "As next steps for this project we intend to examine additionally methods of imputing missing such as replacing with the median and using linear regression. For the small number of variables that could not be reasonable normalised through simple transformations, we will attempt to use binning in hopes to improve the model by improving these variables as logistic regression is heavily dependent on normal data. \n",
+    "\n",
+    "Next, we intend to create dummy variables for our sector level categorical variables for the companies and include this variable in our model analysis. We will continue to expand our correlation analysis in an effort to find other significant relationships between predictor and target variables by comparing continuous with categorical variables and categorical with categorical variables.\n",
+    "\n",
+    "Finally we will use these improvements and new variables with our models to attempt to increase the accuracy of our logistic regression model. Ideally we will obtain as strong as a score as possible using logistic regression but we will also explore the neural network approach to modelling in an effort to create the most accurate model."
+   ]
   }
  ],
  "metadata": {
