--- a/Model For loop.ipynb
+++ b/Model For loop.ipynb
@@ -679,6 +679,7 @@
     }
    ],
    "source": [
+    "# Changing variables to correct type\n",
     "ipo_data.C6x = ipo_data.C6x.astype(float)\n",
     "\n",
     "ipo_data.C2 = ipo_data.C2.astype(int)\n",
@@ -1006,8 +1007,9 @@
     }
    ],
    "source": [
-    "\n",
+    "# Looping through our functions and building models for each combination in order to view best results\n",
     "for j in range(1,5):\n",
+    "    # Creating data set for the model\n",
     "    x=pd.DataFrame.copy(ipo_data)\n",
     "    for i in range(len(x.columns)): \n",
     "        if x.iloc[:,i].dtype == float:\n",
@@ -1016,9 +1018,9 @@
     "                x.iloc[:,i]=standard(x.iloc[:,i],1)\n",
     "    print('Outlier Method {}; Standardise Method {}'.format(j,1))\n",
     "    \n",
+    "    # Model creation starts here\n",
     "    logreg = LogisticRegression()\n",
-    "    #train=['C4','C6x','T4x','S2x']\n",
-    "    #train=['C3x','C4','T3x','T4x','S1x','S2x','C2']\n",
+    "    \n",
     "    train=['C3x','C4','C1','C7','T3x','T4x','T5x','S1x','S2x','S3x','C2']\n",
     "    X=x[train]\n",
     "    y=x['Y1']\n",
@@ -1362,6 +1364,7 @@
     }
    ],
    "source": [
+    "# reducing our sample due to in balance between y2=1 and y2=0\n",
     "df_subset = ipo_data.loc[ipo_data['Y2'] == 1].sample(300)\n",
     "ipo_data = ipo_data.drop(df_subset.index)\n",
     "\n",
