Milestone completed update

--- a/Scratch Files/Decimal Scaling_DE.ipynb
+++ b/Scratch Files/Decimal Scaling_DE.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\danielle.ezzo\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "C:\\Users\\conor\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
       "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
      ]
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#standardize by decimal scale for float columns\n",
@@ -59,57 +61,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     I1                                  I2    I3  P(IPO)    P(H)    P(L)  \\\n",
-      "0  AATI  ADVANCED ANALOGIC TECHNOLOGIES INC  3674   0.100  0.0095  0.0085   \n",
-      "1  ABPI     ACCENTIA BIOPHARMACEUTICALS INC  2834   0.080  0.0100  0.0080   \n",
-      "2  ACAD          ACADIA PHARMACEUTICALS INC  2834   0.070  0.0140  0.0120   \n",
-      "3  ACHN       ACHILLION PHARMACEUTICALS INC  2834   0.115  0.0160  0.0140   \n",
-      "4  ACLI     AMERICAN COMMERCIAL LINES INC.   4492   0.210  0.0210  0.0190   \n",
-      "5  ACOM                  Ancestry.com Inc.   7379   0.135  0.0145  0.0125   \n",
-      "6  ACOR             ACORDA THERAPEUTICS INC  2836   0.060  0.0130  0.0110   \n",
-      "7  ACRX          ACELRX PHARMACEUTICALS INC  2834   0.050  0.0140  0.0120   \n",
-      "8  ACTV                  ACTIVE NETWORK INC  7372   0.150  0.0180  0.0160   \n",
-      "9   ACW                       ACCURIDE CORP  3714   0.090  0.0190  0.0170   \n",
+      "           P(IPO)        P(H)        P(L)     P(1Day)          C1          C3  \\\n",
+      "count  677.000000  672.000000  672.000000  660.000000  660.000000  646.000000   \n",
+      "mean     0.138377    0.015481    0.013515    0.002593    0.014973    0.000179   \n",
+      "std      0.060537    0.006653    0.005836    0.007323    0.015282    0.016267   \n",
+      "min      0.030000    0.000000    0.003000    0.000000    0.001000   -0.078624   \n",
+      "25%      0.100000    0.012500    0.011000    0.001100    0.008500   -0.000085   \n",
+      "50%      0.135000    0.015000    0.013000    0.001485    0.010700    0.000001   \n",
+      "75%      0.170000    0.017000    0.015000    0.002048    0.015525    0.000047   \n",
+      "max      0.850000    0.135000    0.108000    0.115920    0.208700    0.386450   \n",
       "\n",
-      "    P(1Day)      C1     C2        C3  ...          C6        C7      T1  \\\n",
-      "0  0.001187  0.0122   True  0.000343  ...    0.010600  0.000513  0.0470   \n",
-      "1  0.000725  0.0259  False -0.000162  ...    0.002400  0.000259  0.0791   \n",
-      "2  0.000670  0.0090   True -0.000124  ...    0.005000  0.000074  0.0201   \n",
-      "3  0.001239  0.0209   True -0.000091  ...    0.004500  0.000085  0.0328   \n",
-      "4  0.005660  0.0080   True  0.000007  ...    0.008250  0.006323  0.0572   \n",
-      "5  0.001420  0.0094   True  0.000006  ...    0.007407  0.001976  0.0510   \n",
-      "6  0.000672  0.0128   True -0.000187  ...    0.005500  0.000051  0.0495   \n",
-      "7  0.000455  0.0091  False -0.000074  ...    0.008000       NaN  0.0334   \n",
-      "8  0.001590  0.0100   True -0.000051  ...    0.011000  0.002796  0.0620   \n",
-      "9  0.000000  0.0106   True  0.000149  ...    0.011000  0.004940  0.0385   \n",
+      "               C4          C5          C6            C7          T1  \\\n",
+      "count  660.000000  676.000000  676.000000  6.100000e+02  681.000000   \n",
+      "mean     0.000728    0.004936    0.012415  5.004600e-03    0.046563   \n",
+      "std      0.003332    0.010438    0.025129  1.648338e-02    0.017574   \n",
+      "min     -0.016235    0.000369    0.000525  7.400000e-07    0.013200   \n",
+      "25%     -0.001393    0.001871    0.005000  3.724575e-04    0.035100   \n",
+      "50%      0.000912    0.002740    0.007399  1.038330e-03    0.044400   \n",
+      "75%      0.003157    0.004981    0.012000  3.311380e-03    0.055100   \n",
+      "max      0.009290    0.213809    0.421234  3.068300e-01    0.175000   \n",
       "\n",
-      "        T2       T3      T4       T5     S1     S2     S3  \n",
-      "0  0.12719  0.11560  0.0301  0.00690  0.062  0.117  0.139  \n",
-      "1  0.21792  0.19585  0.0510  0.01120  0.071  0.242  0.237  \n",
-      "2  0.05262  0.04785  0.0128  0.00325  0.061  0.033  0.060  \n",
-      "3  0.08259  0.07574  0.0177  0.00509  0.080  0.059  0.110  \n",
-      "4  0.14830  0.13176  0.0336  0.00720  0.067  0.149  0.167  \n",
-      "5  0.17999  0.13934  0.0328  0.00815  0.062  0.096  0.181  \n",
-      "6  0.15758  0.13953  0.0379  0.00698  0.082  0.106  0.135  \n",
-      "7  0.11226  0.10056  0.0276 -0.00001  0.055  0.120  0.122  \n",
-      "8  0.14813  0.13463  0.0335  0.00917  0.058  0.124  0.234  \n",
-      "9  0.09134  0.08107  0.0198  0.00459  0.081  0.090  0.147  \n",
+      "               T2          T3          T4          T5          S1          S2  \\\n",
+      "count  681.000000  681.000000  681.000000  681.000000  681.000000  681.000000   \n",
+      "mean     0.127586    0.113958    0.029435    0.006792    0.068421    0.120104   \n",
+      "std      0.054496    0.048397    0.012153    0.004729    0.039097    0.084829   \n",
+      "min      0.000000    0.000000    0.000000   -0.000010   -0.001000    0.020000   \n",
+      "25%      0.091950    0.081620    0.021300    0.004620    0.045000    0.073000   \n",
+      "50%      0.120450    0.107850    0.027900    0.006240    0.060000    0.100000   \n",
+      "75%      0.152410    0.137600    0.035400    0.007950    0.085000    0.142000   \n",
+      "max      0.490560    0.439520    0.105800    0.102770    0.309000    0.944000   \n",
       "\n",
-      "[10 rows x 22 columns]\n"
+      "               S3  \n",
+      "count  681.000000  \n",
+      "mean     0.144759  \n",
+      "std      0.069276  \n",
+      "min      0.026000  \n",
+      "25%      0.100000  \n",
+      "50%      0.134000  \n",
+      "75%      0.173000  \n",
+      "max      0.883000  \n"
      ]
     }
    ],
    "source": [
     "#confirm standardization worked\n",
-    "print(ipo_data.head(10))"
+    "print(ipo_data.describe())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
