--- a/Scratch Files/Milestone Report-Copy1.ipynb
+++ b/Scratch Files/Milestone Report-Copy1.ipynb
@@ -2985,7 +2985,7 @@
     "ipo_data_y2=pd.DataFrame.copy(ipo_data)\n",
     "\n",
     "# Subsetting the data in order to create a balanced data set between Y2 = 1 and Y2 = 0\n",
-    "df_subset = ipo_data_y2.loc[ipo_data_y2['Y2'] == 1].sample(300)\n",
+    "df_subset = ipo_data_y2.loc[ipo_data_y2['Y2'] == 1].sample(300,random_state=0)\n",
     "ipo_data_y2 = ipo_data_y2.drop(df_subset.index)\n",
     "\n",
     "# for loop to deal with outliers in float variables\n",
